collect most wins

--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "# Don't mind me, just importing data.\n",
     "import pandas as pd\n",
+    "from tabulate import tabulate\n",
     "\n",
     "managers = pd.read_csv(\"data/managers.csv\")\n",
     "players = pd.read_csv(\"data/players.csv\")\n",
@@ -59,7 +60,7 @@
     "        if output:\n",
     "            print(output + \")\")\n",
     "\n",
-    "        output = f\"{row['season_id']}\"\n",
+    "        output = f\"{row['season_id']} -\"\n",
     "\n",
     "    current_rank = row[\"final_standing\"]\n",
     "    if current_rank == 1:\n",
@@ -95,10 +96,31 @@
    "source": [
     "champions = finish.loc[(finish['final_standing'] == 1)]\n",
     "champions = champions.groupby(['manager_id', 'manager_name'])[\"manager_id\"].count() \\\n",
-    "    .reset_index(name=\"count\").sort_values(by=[\"count\", \"manager_name\"], ascending=[False, True])\n",
+    "    .reset_index(name=\"count\").sort_values(by=[\"count\", \"manager_name\"], ascending=[False, True]) \\\n",
+    "    [[\"manager_name\", \"count\"]]\n",
     "\n",
-    "for _, row in champions.iterrows():\n",
-    "    print(f\"{row['manager_name']} ({row['count']})\")"
+    "print(tabulate(champions, headers='keys', tablefmt='psql', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Most Regular Seasons Wins\n",
+    "You don't get a trophy for this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wins_count = seasons.groupby(['manager_id', 'manager_name'])['wins'].sum() \\\n",
+    "    .reset_index(name=\"sum\").sort_values(by=['sum', 'manager_name'], ascending=[False, True]) \\\n",
+    "    [[\"manager_name\", \"sum\"]]\n",
+    "\n",
+    "print(tabulate(wins_count, headers='keys', tablefmt='psql', showindex=False))"
    ]
   }
  ],
