total points scored

--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -32,7 +32,8 @@
     "lineups = lineups.merge(players, on=\"player_id\")\n",
     "\n",
     "seasons = pd.read_csv(\"data/seasons.csv\")\n",
-    "seasons = seasons.merge(managers, on=\"manager_id\")"
+    "seasons = seasons.merge(managers, on=\"manager_id\")\n",
+    "seasons['total_games'] = seasons[['wins', 'ties', 'losses']].sum(axis=1)"
    ]
   },
   {
@@ -107,7 +108,7 @@
    "metadata": {},
    "source": [
     "# Most Regular Seasons Wins\n",
-    "You don't get a trophy for this."
+    "Unfortunately, you don't get a trophy for this."
    ]
   },
   {
@@ -117,10 +118,72 @@
    "outputs": [],
    "source": [
     "wins_count = seasons.groupby(['manager_id', 'manager_name'])['wins'].sum() \\\n",
-    "    .reset_index(name=\"sum\").sort_values(by=['sum', 'manager_name'], ascending=[False, True]) \\\n",
-    "    [[\"manager_name\", \"sum\"]]\n",
+    "    .reset_index(name=\"total_wins\").sort_values(\n",
+    "        by=['total_wins', 'manager_name'],\n",
+    "        ascending=[False, True]\n",
+    "    )[[\"manager_name\", \"total_wins\"]]\n",
     "\n",
     "print(tabulate(wins_count, headers='keys', tablefmt='psql', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Highest Regular Season Winning Percentage\n",
+    "Some say wins are a longevity stat."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_wins = seasons.groupby(['manager_id', 'manager_name'])['wins'].sum() \\\n",
+    "    .reset_index(name='total_wins').sort_values(by=['manager_id'], ascending=True)\n",
+    "    \n",
+    "total_games = seasons.groupby(['manager_id', 'manager_name'])['total_games'].sum() \\\n",
+    "    .reset_index(name='total_games').sort_values(by=['manager_id'], ascending=True)\n",
+    "\n",
+    "win_percentage = total_wins[['manager_id', 'manager_name']]\n",
+    "win_percentage['win_percentage'] = total_wins['total_wins'] / total_games['total_games']\n",
+    "win_percentage = win_percentage.sort_values(\n",
+    "        by=['win_percentage', 'manager_name'], \n",
+    "        ascending=[False, True]\n",
+    "    )[[\"manager_name\", \"win_percentage\"]]\n",
+    "\n",
+    "print(tabulate(win_percentage, headers='keys', tablefmt='psql', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Total Points Scored (Regular Season)\n",
+    "The 2013 Denver Broncos scored the most points in the regular season but lost 43-8 in the Super Bowl."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_points_scored = seasons.groupby(['manager_id', 'manager_name'])['points_for'].sum() \\\n",
+    "    .reset_index(name='total_points').sort_values(\n",
+    "        by=['total_points', 'manager_name'], ascending=[False, True]\n",
+    "    )[[\"manager_name\", \"total_points\"]]\n",
+    "\n",
+    "print(tabulate(total_points_scored, headers='keys', tablefmt='psql', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Average Points Per Game (Regular Season)\n",
+    "Against these managers, you're gonna have a bad time."
    ]
   }
  ],
