--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -15,6 +15,8 @@
    "outputs": [],
    "source": [
     "# Don't mind me, just importing data.\n",
+    "from datetime import datetime\n",
+    "\n",
     "import pandas as pd\n",
     "from tabulate import tabulate\n",
     "\n",
@@ -26,6 +28,28 @@
     "\n",
     "games = pd.read_csv(\"data/games.csv\")\n",
     "games = games.merge(managers, on=\"manager_id\")\n",
+    "\n",
+    "playoff_start_weeks = []  # list of (season, first week of playoffs)\n",
+    "for season in range(2013, 2021):\n",
+    "    playoff_start_weeks.append((season, 15))\n",
+    "for season in range(2021, datetime.now().year + 1):  # 17 week NFL seasons smh\n",
+    "    playoff_start_weeks.append((season, 16))\n",
+    "\n",
+    "regular_season_games = games.copy(deep=True)\n",
+    "for season, start_week in playoff_start_weeks:\n",
+    "    regular_season_games = regular_season_games.drop(\n",
+    "        regular_season_games[\n",
+    "            (regular_season_games['season_id'] == season) &\n",
+    "            (regular_season_games['week_id'] >= start_week)\n",
+    "        ].index\n",
+    "    )\n",
+    "\n",
+    "# The same game stats may be present multiple times if the opponent had co-managers, so ensure each\n",
+    "# manager is only represented once here.\n",
+    "regular_season_games_deduped = regular_season_games.drop_duplicates(\n",
+    "    subset=['manager_id', 'season_id', 'week_id'],\n",
+    "    keep='first',\n",
+    ")\n",
     "\n",
     "lineups = pd.read_csv(\"data/lineups.csv\")\n",
     "lineups = lineups.merge(managers, on=\"manager_id\")\n",
@@ -170,12 +194,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_points_scored = seasons.groupby(['manager_id', 'manager_name'])['points_for'].sum() \\\n",
+    "total_points_scored_season_sum = seasons.groupby(['manager_id', 'manager_name'])['points_for'].sum() \\\n",
     "    .reset_index(name='total_points').sort_values(\n",
     "        by=['total_points', 'manager_name'], ascending=[False, True]\n",
     "    )[[\"manager_name\", \"total_points\"]]\n",
     "\n",
-    "print(tabulate(total_points_scored, headers='keys', tablefmt='psql', showindex=False))"
+    "print(tabulate(total_points_scored_season_sum, headers='keys', tablefmt='psql', showindex=False))"
    ]
   },
   {
@@ -184,6 +208,29 @@
    "source": [
     "# Average Points Per Game (Regular Season)\n",
     "Against these managers, you're gonna have a bad time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_points_scored_game_sum = \\\n",
+    "    regular_season_games_deduped.groupby(['manager_id', 'manager_name'])['points_for'].sum() \\\n",
+    "        .reset_index(name='total_points').sort_values(\n",
+    "            by=['total_points', 'manager_name'], ascending=[False, True]\n",
+    "        )[[\"manager_name\", \"total_points\"]]\n",
+    "\n",
+    "print(tabulate(total_points_scored_game_sum, headers='keys', tablefmt='psql', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Average Points Against\n",
+    "Weakest defenses in the league 😤"
    ]
   }
  ],
