points per game

--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -194,12 +194,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_points_scored_season_sum = seasons.groupby(['manager_id', 'manager_name'])['points_for'].sum() \\\n",
-    "    .reset_index(name='total_points').sort_values(\n",
-    "        by=['total_points', 'manager_name'], ascending=[False, True]\n",
-    "    )[[\"manager_name\", \"total_points\"]]\n",
+    "total_points_scored_from_seasons = \\\n",
+    "    seasons.groupby(['manager_id', 'manager_name'])['points_for'].sum() \\\n",
+    "        .reset_index(name='total_points').sort_values(\n",
+    "            by=['total_points', 'manager_name'], ascending=[False, True]\n",
+    "        )[[\"manager_name\", \"total_points\"]]\n",
     "\n",
-    "print(tabulate(total_points_scored_season_sum, headers='keys', tablefmt='psql', showindex=False))"
+    "print(tabulate(total_points_scored_from_seasons, headers='keys', tablefmt='psql', showindex=False))"
    ]
   },
   {
@@ -216,13 +217,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_points_scored_game_sum = \\\n",
+    "total_points_scored_from_games = \\\n",
     "    regular_season_games_deduped.groupby(['manager_id', 'manager_name'])['points_for'].sum() \\\n",
     "        .reset_index(name='total_points').sort_values(\n",
     "            by=['total_points', 'manager_name'], ascending=[False, True]\n",
-    "        )[[\"manager_name\", \"total_points\"]]\n",
+    "        ).sort_values(by='manager_id', ascending=True)\n",
     "\n",
-    "print(tabulate(total_points_scored_game_sum, headers='keys', tablefmt='psql', showindex=False))"
+    "total_games_from_games = \\\n",
+    "    regular_season_games_deduped.groupby(['manager_id', 'manager_name'])['manager_id'].count() \\\n",
+    "        .reset_index(name='count').sort_values(by='manager_id', ascending=True)\n",
+    "\n",
+    "total_points_scored_from_games['points_per_game'] = \\\n",
+    "    total_points_scored_from_games['total_points'] / \\\n",
+    "    total_games_from_games['count']\n",
+    "\n",
+    "total_points_scored_from_games = total_points_scored_from_games.sort_values(\n",
+    "    by=['points_per_game', 'manager_id'],\n",
+    "    ascending=[False, True]\n",
+    ")[['manager_name', 'points_per_game']]\n",
+    "\n",
+    "print(tabulate(total_points_scored_from_games, headers='keys', tablefmt='psql', showindex=False))"
    ]
   },
   {
