--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -219,9 +219,7 @@
    "source": [
     "total_points_scored_from_games = \\\n",
     "    regular_season_games_deduped.groupby(['manager_id', 'manager_name'])['points_for'].sum() \\\n",
-    "        .reset_index(name='total_points').sort_values(\n",
-    "            by=['total_points', 'manager_name'], ascending=[False, True]\n",
-    "        ).sort_values(by='manager_id', ascending=True)\n",
+    "        .reset_index(name='total_points').sort_values(by='manager_id', ascending=True)\n",
     "\n",
     "total_games_from_games = \\\n",
     "    regular_season_games_deduped.groupby(['manager_id', 'manager_name'])['manager_id'].count() \\\n",
@@ -243,8 +241,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Average Points Against\n",
-    "Weakest defenses in the league 😤"
+    "# Average Points Against (Regular Season)\n",
+    "Our unluckiest managers. Alternatively, the weakest defenses in the league 😤"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_points_against_from_games = \\\n",
+    "    regular_season_games_deduped.groupby(['manager_id', 'manager_name'])['points_against'].sum() \\\n",
+    "        .reset_index(name='total_points_against').sort_values(by='manager_id', ascending=True)\n",
+    "\n",
+    "total_games_from_games = \\\n",
+    "    regular_season_games_deduped.groupby(['manager_id', 'manager_name'])['manager_id'].count() \\\n",
+    "        .reset_index(name='count').sort_values(by='manager_id', ascending=True)\n",
+    "\n",
+    "total_points_against_from_games['points_against_per_game'] = \\\n",
+    "    total_points_against_from_games['total_points_against'] / \\\n",
+    "    total_games_from_games['count']\n",
+    "\n",
+    "total_points_against_from_games = total_points_against_from_games.sort_values(\n",
+    "    by=['points_against_per_game', 'manager_id'],\n",
+    "    ascending=[False, True]\n",
+    ")[['manager_name', 'points_against_per_game']]\n",
+    "\n",
+    "print(tabulate(total_points_against_from_games, headers='keys', tablefmt='psql', showindex=False))"
    ]
   }
  ],
