show seasons count

--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -64,6 +64,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## League Members\n",
+    "Here are all the members in the league, past and present."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_count = seasons.groupby(['manager_id', 'manager_name'])[\"manager_id\"].count() \\\n",
+    "    .reset_index(name=\"num_seasons\") \\\n",
+    "    .sort_values(by=[\"num_seasons\", \"manager_name\"], ascending=[False, True]) \\\n",
+    "    [[\"manager_name\", \"num_seasons\"]]\n",
+    "\n",
+    "print(tabulate(seasons_count, headers='keys', tablefmt='psql', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# League champions\n",
     "Here, there be champions (and runner-ups)."
    ]
