add num_seasons to some outputs

--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -76,10 +76,16 @@
    "source": [
     "seasons_count = seasons.groupby(['manager_id', 'manager_name'])[\"manager_id\"].count() \\\n",
     "    .reset_index(name=\"num_seasons\") \\\n",
-    "    .sort_values(by=[\"num_seasons\", \"manager_name\"], ascending=[False, True]) \\\n",
-    "    [[\"manager_name\", \"num_seasons\"]]\n",
+    "    .sort_values(by=[\"num_seasons\", \"manager_name\"], ascending=[False, True])\n",
     "\n",
-    "print(tabulate(seasons_count, headers='keys', tablefmt='psql', showindex=False))"
+    "print(\n",
+    "    tabulate(\n",
+    "        seasons_count[[\"manager_name\", \"num_seasons\"]],\n",
+    "        headers='keys',\n",
+    "        tablefmt='psql',\n",
+    "        showindex=False\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -143,9 +149,11 @@
    "source": [
     "champions = finish.loc[(finish['final_standing'] == 1)]\n",
     "champions = champions.groupby(['manager_id', 'manager_name'])[\"manager_id\"].count() \\\n",
-    "    .reset_index(name=\"count\").sort_values(by=[\"count\", \"manager_name\"], ascending=[False, True]) \\\n",
-    "    [[\"manager_name\", \"count\"]]\n",
+    "    .reset_index(name=\"num_championships\")\\\n",
+    "    .sort_values(by=[\"num_championships\", \"manager_name\"], ascending=[False, True])\n",
     "\n",
+    "champions = champions.merge(seasons_count[['manager_id', 'num_seasons']], on=\"manager_id\") \\\n",
+    "    [['manager_name', 'num_seasons', 'num_championships']]\n",
     "print(tabulate(champions, headers='keys', tablefmt='psql', showindex=False))"
    ]
   },
@@ -167,8 +175,10 @@
     "    .reset_index(name=\"total_wins\").sort_values(\n",
     "        by=['total_wins', 'manager_name'],\n",
     "        ascending=[False, True]\n",
-    "    )[[\"manager_name\", \"total_wins\"]]\n",
+    "    )\n",
     "\n",
+    "wins_count = wins_count.merge(seasons_count[['manager_id', 'num_seasons']], on=\"manager_id\") \\\n",
+    "    [['manager_name', 'num_seasons', 'total_wins']]\n",
     "print(tabulate(wins_count, headers='keys', tablefmt='psql', showindex=False))"
    ]
   },
@@ -197,8 +207,11 @@
     "win_percentage = win_percentage.sort_values(\n",
     "        by=['win_percentage', 'manager_name'], \n",
     "        ascending=[False, True]\n",
-    "    )[[\"manager_name\", \"win_percentage\"]]\n",
+    "    )\n",
     "\n",
+    "win_percentage = win_percentage.merge(\n",
+    "        seasons_count[['manager_id', 'num_seasons']], on=\"manager_id\"\n",
+    "    )[['manager_name', 'num_seasons', 'win_percentage']]\n",
     "print(tabulate(win_percentage, headers='keys', tablefmt='psql', showindex=False))"
    ]
   },
@@ -220,8 +233,11 @@
     "    seasons.groupby(['manager_id', 'manager_name'])['points_for'].sum() \\\n",
     "        .reset_index(name='total_points').sort_values(\n",
     "            by=['total_points', 'manager_name'], ascending=[False, True]\n",
-    "        )[[\"manager_name\", \"total_points\"]]\n",
+    "        )\n",
     "\n",
+    "total_points_scored_from_seasons = total_points_scored_from_seasons.merge(\n",
+    "        seasons_count[['manager_id', 'num_seasons']], on=\"manager_id\"\n",
+    "    )[['manager_name', 'num_seasons', 'total_points']]\n",
     "print(tabulate(total_points_scored_from_seasons, headers='keys', tablefmt='psql', showindex=False))"
    ]
   },
