print favorite starters

--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -55,6 +55,15 @@
     "lineups = lineups.merge(managers, on=\"manager_id\")\n",
     "lineups = lineups.merge(players, on=\"player_id\")\n",
     "\n",
+    "regular_season_lineups = lineups.copy(deep=True)\n",
+    "for season, start_week in playoff_start_weeks:\n",
+    "    regular_season_lineups = regular_season_lineups.drop(\n",
+    "        regular_season_lineups[\n",
+    "            (regular_season_lineups['season_id'] == season) &\n",
+    "            (regular_season_lineups['week_id'] >= start_week)\n",
+    "        ].index\n",
+    "    )\n",
+    "\n",
     "seasons = pd.read_csv(\"data/seasons.csv\")\n",
     "seasons = seasons.merge(managers, on=\"manager_id\")\n",
     "seasons['total_games'] = seasons[['wins', 'ties', 'losses']].sum(axis=1)"
@@ -103,7 +112,8 @@
    "outputs": [],
    "source": [
     "champion_results = finish.loc[(finish['final_standing'] == 1) | (finish[\"final_standing\"] == 2)]\n",
-    "champion_results = champion_results.sort_values(by=[\"season_id\", \"final_standing\"], ascending=[False, True])\n",
+    "champion_results = \\\n",
+    "    champion_results.sort_values(by=[\"season_id\", \"final_standing\"], ascending=[False, True])\n",
     "\n",
     "previous_season_id = None\n",
     "last_rank = None\n",
@@ -307,6 +317,38 @@
     ")[['manager_name', 'points_against_per_game']]\n",
     "\n",
     "print(tabulate(total_points_against_from_games, headers='keys', tablefmt='psql', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Favorite Starters (Regular Season)\n",
+    "Whom do the managers rely on through thick and thin?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regular_season_starters = regular_season_lineups[regular_season_lineups['is_starter'] == True]\n",
+    "regular_season_starters_grouped = \\\n",
+    "    regular_season_starters.groupby(by=['manager_id', 'manager_name'])\n",
+    "\n",
+    "for (manager_id, manager_name), starters_grouping in regular_season_starters_grouped:\n",
+    "    print(f\"Favorite starters for {manager_name}\")\n",
+    "\n",
+    "    starters_grouping: pd.DataFrame\n",
+    "    manager_starters = \\\n",
+    "        starters_grouping.groupby(by=['player_id', 'player_name'])['player_id'].count() \\\n",
+    "            .reset_index(name='games_started')\\\n",
+    "            .sort_values(by=['games_started', 'player_name'], ascending=[False, True])\n",
+    "    \n",
+    "    manager_starters = manager_starters[['player_name', 'games_started']]\n",
+    "    print(tabulate(manager_starters.iloc[:3], headers='keys', tablefmt='psql', showindex=False))\n",
+    "    print()"
    ]
   }
  ],
