favorite starters and players

--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -350,6 +350,37 @@
     "    print(tabulate(manager_starters.iloc[:3], headers='keys', tablefmt='psql', showindex=False))\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Favorite Players (Regular Season)\n",
+    "Old reliables or merely good luck charms? Here, we count the number of weeks players have been rostered, not just started."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regular_season_lineups_grouped = \\\n",
+    "    regular_season_lineups.groupby(by=['manager_id', 'manager_name'])\n",
+    "\n",
+    "for (manager_id, manager_name), lineup_grouping in regular_season_lineups_grouped:\n",
+    "    print(f\"Favorite starters for {manager_name}\")\n",
+    "\n",
+    "    lineup_grouping: pd.DataFrame\n",
+    "    manager_lineup = \\\n",
+    "        lineup_grouping.groupby(by=['player_id', 'player_name'])['player_id'].count() \\\n",
+    "            .reset_index(name='games_started')\\\n",
+    "            .sort_values(by=['games_started', 'player_name'], ascending=[False, True])\n",
+    "    \n",
+    "    manager_lineup = manager_lineup[['player_name', 'games_started']]\n",
+    "    print(tabulate(manager_lineup.iloc[:3], headers='keys', tablefmt='psql', showindex=False))\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
