--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -374,10 +374,10 @@
     "    lineup_grouping: pd.DataFrame\n",
     "    manager_lineup = \\\n",
     "        lineup_grouping.groupby(by=['player_id', 'player_name'])['player_id'].count() \\\n",
-    "            .reset_index(name='games_started')\\\n",
-    "            .sort_values(by=['games_started', 'player_name'], ascending=[False, True])\n",
+    "            .reset_index(name='games_rostered')\\\n",
+    "            .sort_values(by=['games_rostered', 'player_name'], ascending=[False, True])\n",
     "    \n",
-    "    manager_lineup = manager_lineup[['player_name', 'games_started']]\n",
+    "    manager_lineup = manager_lineup[['player_name', 'games_rostered']]\n",
     "    print(tabulate(manager_lineup.iloc[:3], headers='keys', tablefmt='psql', showindex=False))\n",
     "    print()"
    ]
