--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -369,7 +369,7 @@
     "    regular_season_lineups.groupby(by=['manager_id', 'manager_name'])\n",
     "\n",
     "for (manager_id, manager_name), lineup_grouping in regular_season_lineups_grouped:\n",
-    "    print(f\"Favorite starters for {manager_name}\")\n",
+    "    print(f\"Favorite players for {manager_name}\")\n",
     "\n",
     "    lineup_grouping: pd.DataFrame\n",
     "    manager_lineup = \\\n",
