--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -162,9 +162,15 @@
     "    .reset_index(name=\"num_championships\")\\\n",
     "    .sort_values(by=[\"num_championships\", \"manager_name\"], ascending=[False, True])\n",
     "\n",
-    "champions = champions.merge(seasons_count[['manager_id', 'num_seasons']], on=\"manager_id\") \\\n",
-    "    [['manager_name', 'num_seasons', 'num_championships']]\n",
-    "print(tabulate(champions, headers='keys', tablefmt='psql', showindex=False))"
+    "champions = champions.merge(seasons_count[['manager_id', 'num_seasons']], on=\"manager_id\")\n",
+    "print(\n",
+    "    tabulate(\n",
+    "        champions[['manager_name', 'num_seasons', 'num_championships']],\n",
+    "        headers='keys',\n",
+    "        tablefmt='psql',\n",
+    "        showindex=False\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -196,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Highest Regular Season Winning Percentage\n",
+    "## Highest Regular Season Winning Percentage\n",
     "Some say wins are a longevity stat."
    ]
   },
@@ -223,6 +229,126 @@
     "        seasons_count[['manager_id', 'num_seasons']], on=\"manager_id\"\n",
     "    )[['manager_name', 'num_seasons', 'win_percentage']]\n",
     "print(tabulate(win_percentage, headers='keys', tablefmt='psql', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average Regular Season Finish\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_regular_season_standings = \\\n",
+    "    seasons.groupby(['manager_id', 'manager_name'])['regular_season_standing'].sum() \\\n",
+    "        .reset_index(name=\"total_regular_season_standing\")\n",
+    "\n",
+    "average_regular_season_standings = \\\n",
+    "    average_regular_season_standings.merge(\n",
+    "        seasons_count[['manager_id', 'num_seasons']], on=\"manager_id\"\n",
+    "    )\n",
+    "average_regular_season_standings['average_regular_season_standing'] = \\\n",
+    "    average_regular_season_standings['total_regular_season_standing'] / \\\n",
+    "    average_regular_season_standings['num_seasons']\n",
+    "average_regular_season_standings = average_regular_season_standings.sort_values(\n",
+    "    by=[\"average_regular_season_standing\", \"manager_name\"], ascending=[True, True]\n",
+    ")\n",
+    "\n",
+    "print(tabulate(\n",
+    "    average_regular_season_standings[[\n",
+    "        'manager_name', 'num_seasons', 'average_regular_season_standing'\n",
+    "    ]],\n",
+    "    headers='keys', tablefmt='psql', showindex=False\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Playoff Appearances\n",
+    "You don't need to be a regular season champion to win in the playoffs, but you do need to be in the playoffs to be a champion. In other words, better to be the 2007 NY Giants than the 2007 Patriots."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_playoff_teams_by_season = []\n",
+    "for season in range(2013, datetime.now().year + 1):\n",
+    "    num_playoff_teams_by_season.append((season, 4))\n",
+    "\n",
+    "playoff_teams: pd.DataFrame = pd.DataFrame(columns=seasons.columns)\n",
+    "for season, num_teams in num_playoff_teams_by_season:\n",
+    "    playoff_teams = pd.concat([\n",
+    "        playoff_teams,\n",
+    "        seasons[\n",
+    "            (seasons['season_id'] == season) & (seasons['regular_season_standing'] <= num_teams)\n",
+    "        ]\n",
+    "    ])\n",
+    "\n",
+    "playoff_teams = playoff_teams.groupby(['manager_id', 'manager_name'])[\"manager_id\"].count() \\\n",
+    "    .reset_index(name=\"num_playoff_appearances\")\n",
+    "\n",
+    "playoff_teams = playoff_teams.merge(seasons_count[['manager_id', 'num_seasons']], on=\"manager_id\")\n",
+    "playoff_teams['playoff_percentage'] = \\\n",
+    "    playoff_teams['num_playoff_appearances'] / \\\n",
+    "    playoff_teams['num_seasons']\n",
+    "playoff_teams = playoff_teams.sort_values(\n",
+    "    by=[\"playoff_percentage\", \"manager_name\"], ascending=[False, True]\n",
+    ")\n",
+    "\n",
+    "print(tabulate(\n",
+    "    playoff_teams[['manager_name', 'num_seasons', 'num_playoff_appearances', 'playoff_percentage']],\n",
+    "    headers='keys',\n",
+    "    tablefmt='psql',\n",
+    "    showindex=False\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Championship Percent in Playoffs Made\n",
+    "It's all about seizing the day."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percent_championships_in_playoffs = \\\n",
+    "    playoff_teams.merge(champions[['manager_id', 'num_championships']], on='manager_id')\n",
+    "percent_championships_in_playoffs['championship_percentage_in_playoffs'] = \\\n",
+    "    percent_championships_in_playoffs['num_championships'] / \\\n",
+    "    percent_championships_in_playoffs['num_playoff_appearances']\n",
+    "\n",
+    "percent_championships_in_playoffs = percent_championships_in_playoffs.sort_values(\n",
+    "    by=['championship_percentage_in_playoffs', 'manager_name'],\n",
+    "    ascending=[False, True]\n",
+    ")\n",
+    "\n",
+    "print(tabulate(\n",
+    "    percent_championships_in_playoffs[\n",
+    "        [\n",
+    "            'manager_name',\n",
+    "            'num_playoff_appearances',\n",
+    "            'num_championships',\n",
+    "            'championship_percentage_in_playoffs'\n",
+    "        ]\n",
+    "    ],\n",
+    "    headers='keys', tablefmt='psql', showindex=False\n",
+    "))"
    ]
   },
   {
