head to head records

--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -507,6 +507,74 @@
     "    print(tabulate(manager_lineup.iloc[:3], headers='keys', tablefmt='psql', showindex=False))\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Historic Head to Head Record\n",
+    "The biggest rivalries and most lopsided matchups."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "managers_renamed = managers.rename(\n",
+    "    columns={\"manager_name\": \"opponent_name\", 'manager_id': 'opponent_id'}\n",
+    ")\n",
+    "regular_season_games_with_opponent_names = regular_season_games.merge(\n",
+    "    managers_renamed[['opponent_id', 'opponent_name']],\n",
+    "    on='opponent_id',\n",
+    ")\n",
+    "regular_season_games_grouped = \\\n",
+    "    regular_season_games_with_opponent_names.groupby(by=['manager_id', 'manager_name'])\n",
+    "\n",
+    "for (manager_id, manager_name), games_group in regular_season_games_grouped:\n",
+    "    print(f\"Head to head records for for {manager_name}\")\n",
+    "\n",
+    "    matchups = pd.DataFrame(columns=[\n",
+    "        'manager_name',\n",
+    "        'opponent_name',\n",
+    "        'wins',\n",
+    "        'ties',\n",
+    "        'losses',\n",
+    "        'winning_percentage',\n",
+    "    ])\n",
+    "    matchups_grouped = games_group.groupby(by=['opponent_id', 'opponent_name'])\n",
+    "    for (opponent_id, opponent_name), matchups_group in matchups_grouped:\n",
+    "        matchup_data = {\n",
+    "            'manager_name': manager_name,\n",
+    "            'opponent_name': opponent_name,\n",
+    "            'wins': matchups_group[matchups_group['points_for'] > matchups_group['points_against']].shape[0],\n",
+    "            'ties': matchups_group[matchups_group['points_for'] == matchups_group['points_against']].shape[0],\n",
+    "            'losses': matchups_group[matchups_group['points_for'] < matchups_group['points_against']].shape[0],\n",
+    "        }\n",
+    "        matchup_data['winning_percentage'] = (\n",
+    "            matchup_data['wins'] / \n",
+    "            (matchup_data['wins'] + matchup_data['ties'] + matchup_data['losses'])\n",
+    "        )\n",
+    "\n",
+    "        matchups = matchups.append(matchup_data, ignore_index=True)\n",
+    "\n",
+    "    matchups = matchups.sort_values(\n",
+    "        by=['winning_percentage', 'wins', 'opponent_name'],\n",
+    "        ascending=[False, False, True]\n",
+    "    )\n",
+    "    print(\n",
+    "        tabulate(\n",
+    "            matchups[  # type: ignore\n",
+    "                ['manager_name', 'opponent_name', 'wins', 'ties', 'losses', 'winning_percentage']\n",
+    "            ],\n",
+    "            headers='keys',\n",
+    "            tablefmt='psql',\n",
+    "            showindex=False\n",
+    "        )\n",
+    "    )\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
