--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -512,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Historic Head to Head Record\n",
+    "# Historic Head to Head Record (Regular Season)\n",
     "The biggest rivalries and most lopsided matchups."
    ]
   },
