remove pd.append

--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -535,14 +535,7 @@
     "for (manager_id, manager_name), games_group in regular_season_games_grouped:\n",
     "    print(f\"Head to head records for for {manager_name}\")\n",
     "\n",
-    "    matchups = pd.DataFrame(columns=[\n",
-    "        'manager_name',\n",
-    "        'opponent_name',\n",
-    "        'wins',\n",
-    "        'ties',\n",
-    "        'losses',\n",
-    "        'winning_percentage',\n",
-    "    ])\n",
+    "    matchups = []\n",
     "    matchups_grouped = games_group.groupby(by=['opponent_id', 'opponent_name'])\n",
     "    for (opponent_id, opponent_name), matchups_group in matchups_grouped:\n",
     "        matchup_data = {\n",
@@ -557,15 +550,16 @@
     "            (matchup_data['wins'] + matchup_data['ties'] + matchup_data['losses'])\n",
     "        )\n",
     "\n",
-    "        matchups = matchups.append(matchup_data, ignore_index=True)\n",
+    "        matchups.append(matchup_data)\n",
     "\n",
-    "    matchups = matchups.sort_values(\n",
+    "    matchup_df = pd.DataFrame(matchups)\n",
+    "    matchup_df = matchup_df.sort_values(\n",
     "        by=['winning_percentage', 'wins', 'opponent_name'],\n",
     "        ascending=[False, False, True]\n",
     "    )\n",
     "    print(\n",
     "        tabulate(\n",
-    "            matchups[  # type: ignore\n",
+    "            matchup_df[  # type: ignore\n",
     "                ['manager_name', 'opponent_name', 'wins', 'ties', 'losses', 'winning_percentage']\n",
     "            ],\n",
     "            headers='keys',\n",
