--- a/mcvts.ipynb
+++ b/mcvts.ipynb
@@ -533,7 +533,7 @@
     "    regular_season_games_with_opponent_names.groupby(by=['manager_id', 'manager_name'])\n",
     "\n",
     "for (manager_id, manager_name), games_group in regular_season_games_grouped:\n",
-    "    print(f\"Head to head records for for {manager_name}\")\n",
+    "    print(f\"Head to head records for {manager_name}\")\n",
     "\n",
     "    matchups = []\n",
     "    matchups_grouped = games_group.groupby(by=['opponent_id', 'opponent_name'])\n",
